ChangeLog
=========

Release: 1.3.1
===============================================================================
2022-04-15 Removed Linphone from Android and replaced it by PJSIP.

2022-04-07 Removed liblinphone completely because the java part necessary for
           Android had a lot of dependencies who couldn't be resolved. I added
           PJSIP instead.

2022-04-04 Fixed the detection of the client IP address. TPanel reports now the
           correct client IP address to the AMX controller.
           Added a serial number. It consists of a date and the version number.
           The serial number is visible on the command line of the controller
           with the command "show device".

2022-04-03 Added a few commands similar to the TPControl commands.

2022-04-02 Added functions to pause the orientation sensor if the program is
           inactive.
           Added functions to calculate the orientation of the screen.

2022-03-30 Added orientation sensor to turn from portrait to inverted portrait
           or from landscape to inverted landscape and back.

2022-03-26 Completed the PHN commands.

2022-03-25 Fixed the SIP client configuration.
           Added SIP configuration for network protocolls and to handle
           behavior behind a firewall.

2022-03-18 Added some not supported but possible commands to the table of known
           commands in tamxcommand.cpp.
           Improved the way commands are identified as such.

2022-03-16 Added linphone libraries to android build.
           Fixed the scaling for the download button in the settings dialog.
           Fixed a bug on a fresh installation when no controller was
           configured.

2022-03-10 Added support for more than 1 phone line.

2022-03-09 Added a new class to handle SIP commands and to abstract the
           linphone library.
           Started to add some ^PHN commands.

Release: 1.3.0
===============================================================================